--- a/app/views/templates/layout.html
+++ b/app/views/templates/layout.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/static/css/form.css">
 </head>
 <body>
+    <!-- navbarの読み込み -->
     {{template "navbar"}}
     <div class="container text-center">
         {{template "content" . }}
